src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary Transition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Support_Required__c</fullName>
        <label>If Yes, Level of Support Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lift_Transfer_Assistance__c</fullName>
        <label>Lift Transfer Assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Able to Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of Hoyer Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Person Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Person Lift</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <label>Litigation Pending</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Live_with_Opposite_Sex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Live with Opposite Sex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Living_Environment__c</fullName>
        <label>Desired Living Environment</label>
        <picklist>
            <picklistValues>
                <fullName>ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Foster Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Housemates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked_Seclusion_Room_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Seclusion Room Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain_Sibling_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain Sibling Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicaid_ID__c</fullName>
        <label>Medicaid ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Clinical_Acceptance__c</fullName>
        <label>Medical/Clinical Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_History__c</fullName>
        <label>Medical History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_ID__c</fullName>
        <label>Medicare ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Service_Related_Injury__c</fullName>
        <label>Military Service Related Injury</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <label>Military Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/C Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/C General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/C Other than Honorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/C Bad Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/C Dishonorable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/C Entry Level Separation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Misdemeanor__c</fullName>
        <label>Misdemeanor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Misdemeanor_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Misdemeanor/s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobility__c</fullName>
        <label>Mobility</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheelchair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uses Cane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Likely_Placement_Type__c</fullName>
        <label>Most Likely Placement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Academy/Training Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric Hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Treatment Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite/Emergency Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Substance Abuse Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home (Juvenile Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_PBR__c</fullName>
        <formula>IF(NOT(ISBLANK(Person_Being_Referred__c)), Person_Being_Referred__r.Last_Name__c &amp; &apos;, &apos; &amp; Person_Being_Referred__r.First_Name__c, Person_Being_Served__r.LastName &amp; &apos;, &apos; &amp; Person_Being_Served__r.FirstName)</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neuro_Evaluated_By__c</fullName>
        <label>Neuro Evaluated By</label>
        <picklist>
            <picklistValues>
                <fullName>Amber Balogi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christine Hasbrouck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christine Hallermann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colm Roe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Dixon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deborah Gutteridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domingo Costa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donna Kuhlmann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Graham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary McKinney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gregory Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gregory Walton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Janet Keith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer McAvoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Masterson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kristine Bonin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurie Silva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary Jo Anderson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maureen Butler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle Foreman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Riemenschneider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy Ritter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peggy Igleheart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rafael Chaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Bomberger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sara McDonald</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Cutler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherry Dougherty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terri Kraus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Address_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>added in EB-353</description>
        <inlineHelpText>Check this box if the Current Location is different from the Facility or Permanent Address</inlineHelpText>
        <label>New Address Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Cross_Cultural_Placement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Cross Cultural Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mixed_Diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mixed Diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Same_Sex_Peers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Same Sex Peers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nursing_Care_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nursing Oversight Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldPBR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For unlinking purposes, this stores the old PBR ID</description>
        <label>OldPBR</label>
        <referenceTo>Person_Being_Referred__c</referenceTo>
        <relationshipLabel>Referrals (OldPBR)</relationshipLabel>
        <relationshipName>OldPBR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldPBS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OldPBS</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <label>Other Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Placement_Type_Desc__c</fullName>
        <label>Other Placement Type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Home_Placement_Risk_Level__c</fullName>
        <label>Out of Home Placement Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PWS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PWS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parental_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parental Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Guardianship_Conservatorship__c</fullName>
        <label>Partial Guardianship/Conservatorship</label>
        <picklist>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Decisions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Payer_Medical_Record_Number_Description__c</fullName>
        <label>Payer Medical Record Number Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Medical_Record_Number__c</fullName>
        <label>Payer Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Being_Referred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Referred</label>
        <referenceTo>Person_Being_Referred__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Person Being Served)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>MN Specific</description>
        <inlineHelpText>If different than the person&apos;s permanent location</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physically_Aggressive_to_Peers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Aggressive to Peers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physically_Aggressive_to_Self__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Aggressive to Self</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physically_Aggressive_to_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Aggressive to Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placement_Current__c</fullName>
        <label>Placement Current</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_Foster_Care_Count__c</fullName>
        <label>Foster Care (how many times?)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_GroupHomeJuv_Count__c</fullName>
        <label>Group Home (Juvenile Services)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Group_Home_Count__c</fullName>
        <label>Group Home (how many times?)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_History_Plan_to_Return__c</fullName>
        <inlineHelpText>If the client is currently in an out of home placement, is the plan to return client to home/community?</inlineHelpText>
        <label>Placement History Plan to Return</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_History__c</fullName>
        <label>Placement History</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_InpatientSubAbuseTx_Count__c</fullName>
        <label>Inpatient Substance Abuse Treatment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_LongTermSecConfine_Count__c</fullName>
        <label>Long Term Secure Confinement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Non_Current_Historical__c</fullName>
        <inlineHelpText>Select, &quot;Yes,&quot; if the client is not currently in an out of home placement but has a history of placements.  Otherwise, select, &quot;No.&quot;</inlineHelpText>
        <label>Placement Non-Current Historical</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_Other_Count__c</fullName>
        <label>Other (how many times?)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Past_Other_Describe__c</fullName>
        <label>Other (specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_PsychHosp_Count__c</fullName>
        <label>Psychiatric Hospitalization</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Relative_Count__c</fullName>
        <label>Relative (how many times?)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_ResTreatFacility_Count__c</fullName>
        <label>Residential Treatment Facility Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_RespEmShelter_Count__c</fullName>
        <label>Respite/Emergency Shelter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Secure_Detention_Count__c</fullName>
        <label>Secure Detention (how many times?)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement_Type_Current_Other__c</fullName>
        <label>Placement Type Current Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Type_Current__c</fullName>
        <inlineHelpText>If the client is currently in an out of home placement then select the type.</inlineHelpText>
        <label>Placement Type Current</label>
        <picklist>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Academy/Training Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric Hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Treatment Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite/Emergency Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Substance Abuse Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home (Juvenile Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_Type_Risk__c</fullName>
        <inlineHelpText>Select the type of placement that would be most likely to occur, should an out of home placement be required.</inlineHelpText>
        <label>Placement Type Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Academy/Training Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric Hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Treatment Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite/Emergency Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Substance Abuse Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home (Juvenile Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Court__c</fullName>
        <label>Is this client considered pre-court?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Setting__c</fullName>
        <label>Preferred Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Brain_Injury__c</fullName>
        <label>Previous Brain Injury</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Juvenile_Services_Involvement__c</fullName>
        <label>Previous Juvenile Services Involvement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Requested_Location__c</fullName>
        <label>Primary Requested Location</label>
        <picklist>
            <picklistValues>
                <fullName>Any Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowan Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escondido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno-Marks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno-Weber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilroy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granite Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Habra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laramie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas Carmen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Littleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ludlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxnard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix-Arcadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasanton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santiago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tustin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilbur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prime_Number__c</fullName>
        <label>PRIME Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>